--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,86 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
+      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+      <script src="https://kit.fontawesome.com/efa75c5e0c.js" crossorigin="anonymous"></script>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+    <header class="border-bottom mb-5", style="background-color: rgba(190,176,152,0.4);">
+              <nav class="navbar navbar-expand-lg">
+                  <ul class="nav navbar-nav mr-auto">
+                    <li class="nav-item m-4">
+                      <span><%= link_to image_tag('logo.png'), "/" %></span>
+                    </li>
+                  </ul>
+
+
+                  <ul class="nav navbar-nav navbar-right">
+                    <% if user_signed_in? %>
+                     
+
+                      <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
+
+                      <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
+
+                      <li class="mr-4"><%= link_to 'Newspot', new_post_path(current_user), class: "page-link text-dark d-inline-block btn" %></li>
+
+                      <li class="mr-4"><%= link_to 'MY PAGE', user_path(current_user.id), class: "page-link text-dark d-inline-block btn" %></li>
+
+                      <li class="mr-4 animate__pulse"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
+                      <li>
+                        <!-- ここに検索記述 -->
+                      </li>
+                    <% elsif admin_signed_in? %>
+                      <li class="mr-4"><%= link_to '商品一覧', admins_products_path, class: "page-link text-dark d-inline-block btn" %></li>
+                      <li class="mr-4"><%= link_to '会員一覧', admins_members_path, class: "page-link text-dark d-inline-block btn" %></li>
+                      <li class="mr-4"><%= link_to '注文履歴一覧', admins_orders_path, class: "page-link text-dark d-inline-block btn" %></li>
+                      <li class="mr-4"><%= link_to 'ジャンル一覧', admins_product_genres_path, class: "page-link text-dark d-inline-block btn" %></li>
+                      <li class="mr-4"><%= link_to 'Logout', destroy_admin_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
+                      <li>
+                        <%= form_tag(admins_search_path, :method => 'get') do %>
+                          <%= text_field_tag :search %>
+                          <%= select_tag(:option, options_for_select([["member", "1"],["product","2"]])) %>
+                          <%= submit_tag '検索', :name => nil %>
+                        <% end %>
+                      </li>
+                    <% else %>
+                      <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
+
+                      <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
+
+
+                      <li class="mr-4"><%= link_to 'CONTACT', root_path, class: "page-link text-dark d-inline-block btn" %></li>
+
+                      <li class="mr-4"><%= link_to 'Signup', new_user_registration_path, class: "page-link text-dark d-inline-block btn" %></li>
+                      <li class="mr-4"><%= link_to 'Login', new_user_session_path, class: "page-link text-dark d-inline-block btn" %></li>
+                    <% end %>
+                  </ul>
+              </nav>
+              </header>
+              <% if flash[:notice] %>
+      <div class="notification is-info">
+        <p class="notice"><%= notice %></p>
+      </div>
+    <% end %>
+
+
+      <% if flash[:alert] %>
+      <div class="notification is-danger">
+        <p class="alert"><%= alert %></p>
+      </div>
+    <% end %>
+<div>
+
+
     <%= yield %>
+
+</div>
   </body>
 </html>
