--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,15 @@
 <h1>Users#new</h1>
 <p>Find me in app/views/users/new.html.erb</p>
+
+
+<header style="background-color:gray">Header</header>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-2" style="background-color:red;">Red</div>
+    <div class="col-sm-8 hidden-sm" style="background-color:blue;">Blue</div>
+    <div class="col-sm-2" style="background-color:yellow;">Yellow</div>
+  </div>
+</div>
+<footer style="background-color:gray">Footer</footer>
+
+消していい
