--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,68 +1,75 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<div class="row">
+  <div class="col-md-8">
 
+    <section class="hero is-success">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            投稿詳細
+          </h1>
+        </div>
+      </div>
+    </section>
 
-<section class="hero is-success">
-  <div class="hero-body">
-    <div class="container">
-      <h1 class="title">
-        投稿詳細
-      </h1>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-7">
-        <div class="card">
-          <div class="card-image">
-            <figure class="image is-4by3">
-              <%= attachment_post_image_tag @recipe, :post_image %>
-            </figure>
-          </div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <p class="title is-4"><%= @post.title %></p>
+    <section class="section">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-7">
+            <div class="card">
+              <div class="card-image">
+                <figure class="image is-4by3">
+                  <% @post.post_images.each do |img| %>
+                    <%= attachment_image_tag img, :post_image %>
+                  <% end %>
+                  
+                </figure>
+              </div>
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-content">
+                    <p class="title is-4"><%= @post.title %></p>
+                  </div>
+                </div>
+                <div class="content">
+                  <table class="table is-narrow">
+                    <tr>
+                      <th>SPOT</th>
+                    </tr>
+                    <tr>
+                      <td><%= simple_format @post.body %></td>
+                    </tr>
+                  </table>
+                  <% if @post.user.id == current_user.id %>
+                    <%= link_to "編集画面へ", edit_post_path(@post), class: "button is-success" %>
+                  <% end %>
+                </div>
               </div>
             </div>
-            <div class="content">
-              <table class="table is-narrow">
-                <tr>
-                  <th>SPOT</th>
-                </tr>
-                <tr>
-                  <td><%= simple_format @post.body %></td>
-                </tr>
-              </table>
-              <% if @post.user.id == current_user.id %>
-                <%= link_to "編集画面へ", edit_post_path(@post), class: "button is-success" %>
+          </div>
+
+          <div class="column is-4">
+            <article class="panel is-link">
+              <p class="panel-heading">
+                By <%= @post.user.user_name %>
+              </p>
+              <div class="panel-block">
+                <p class="control">
+                  <%= @post.user.profile %>
+                </p>
+              </div>
+              <%= link_to user_path(@post.user), class: "panel-block" do %>
+                <span class="panel-icon">
+                  <i class="fas fa-user" aria-hidden="true"></i>
+                </span>
+                <%= @post.user.user_name %> さんのページへ
               <% end %>
-            </div>
+            </article>
           </div>
         </div>
       </div>
-
-      <div class="column is-4">
-        <article class="panel is-link">
-          <p class="panel-heading">
-            By <%= @post.user.username %>
-          </p>
-          <div class="panel-block">
-            <p class="control">
-              <%= @post.user.profile %>
-            </p>
-          </div>
-          <%= link_to user_path(@post.user), class: "panel-block" do %>
-            <span class="panel-icon">
-              <i class="fas fa-user" aria-hidden="true"></i>
-            </span>
-            <%= @post.user.username %> さんのページへ
-          <% end %>
-        </article>
-      </div>
-    </div>
+    </section>
   </div>
-</section>
+    <div class="row">
+          <%= render 'posts/sidebar', user: @user, post: @post %>
+    </div>
+</div>
