--- a/app/views/posts/top.html.erb
+++ b/app/views/posts/top.html.erb
@@ -3,6 +3,13 @@
 		<div class="col-md-8">
 		 	<h1>Top#top</h1>
 		 	
+		 	<% @posts.each do |post|%>
+		 	<%= link_to post_path(post) do %>
+                  <%= attachment_image_tag post, :post_image %>
+                <% end %>
+		 	<% end %>
+
+
 			<table class="table table-hover table-inverse">
 				 <thead>
 					<tr>
