--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
         <div class="columns is-centered">
           <div class="column is-4">
             <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
-              <%= attachment_image_tag @user, :profile_image, fallback: "noimage.png", class: "profile_image is-rounded" %>
+              <%= attachment_image_tag @user, :profile_image, fallback: "noimage.png", class: "profile_image is-rounded",  format: 'jpeg', class: " pull-left profile-img", fallback: "no_image.jpg", size:"100x100" %>
             </figure>
           </div>
           <div class="column is-8">
@@ -61,7 +61,9 @@
             <div class="card-image">
               <figure class="image is-4by3">
                 <%= link_to post_path(post) do %>
-                  <%= attachment_image_tag post, :image, fallback: "noimage.png" %>
+                <% post.post_images.each do |img| %>
+                  <%= attachment_image_tag img, :post_image, fallback: "noimage.png" %>
+                <% end %>
                 <% end %>
               </figure>
             </div>
