--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,59 +1,66 @@
-
 <div class="row">
   <div class="col-md-8">
+
     <div class="container">
-      <h1 class="title">
-        新規投稿作成
-      </h1>
-    </div>
-
-
-
-    <% if @post.errors.any? %>
-      <div class="notification is-danger">
-        <h2><%= pluralize(@post.errors.count, "error") %> prohibited this object from being saved: not successfully</h2>
-        <ul>
-          <% @post.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-          <% end %>
-        </ul>
+      <div class="row">
+            <div class="col-4 offset-1 table-active h4 text-center">POST</div>
       </div>
-    <% end %>
 
-    <section class="section">
-      <div class="container">
-        <div class="columns is-centered">
-          <div class="column is-6">
-            <%= form_for @post do |f| %>
-              <div class="field">
-                <%= f.label :title, "タイトル", class: "label" %>
-                <%= f.text_field :title, class: "input" %>
-              </div>
 
-              <div class="field">
-                <%= f.label :body, "内容", class: "label" %>
-                <%= f.text_area :body, class: "textarea" %>
-              </div>
 
-                <%= f.fields_for :post_images do |image| %>
-
-                  <div class="field">
-                    <%= image.label :post_image, "写真", class: "label" %>
-                    <%= image.attachment_field :post_image, class: "input" %>
-                  </div>
+        <div style="padding-top: 80px;">
+          <% if @post.errors.any? %>
+            <div class="notification is-danger">
+              <h2><%= pluralize(@post.errors.count, "error") %> prohibited this object from being saved: not successfully</h2>
+              <ul>
+                <% @post.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
                 <% end %>
+              </ul>
+            </div>
+          <% end %>
 
-              <%= f.submit '投稿', class: "button is-success" %>
+          <section class="section">
+            <div class="container">
+              <div class="columns is-centered">
+                <div class="column is-6">
+                  <%= form_for @post do |f| %>
+                    <div class="field">
+                      <%= f.label :title, "タイトル", style: "width: 15%;", class: "label" %>
+                      <%= f.text_field :title, style: "width: 45%;", class: "input" %>
+                    </div>
 
-            <% end %>
-          </div>
+                    <%= f.fields_for :post_images do |img| %>
+
+                        <div class="field">
+                          <%= img.label :post_image, "写真", style: "width: 15%;", class: "label" %>
+                          <%= img.attachment_field :post_image, class: "input" %>
+                        </div>
+                      <% end %>
+
+                    <div class="field">
+                      <%= f.label :body, "内容", style: "width: 15%;", class: "label" %>
+                      <%= f.text_area :body, style: "width: 60%; height: 120px;", class: "textarea" %>
+                    </div>
+
+                      
+
+                    <%= f.submit '投稿', class: "button is-success" %>
+
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
-      </div>
-    </section>
   </div>
 
 
+  </div>
   <div class="row">
       <%= render 'posts/sidebar', user: @user, post: @post %>
   </div>
 </div>
+
+  
+
