--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,37 @@
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-10">
 
-    <section class="hero is-success">
-      <div class="hero-body">
+
+
         <div class="container">
           <h1 class="title">
-            投稿詳細
+            <div class="media">
+              <div class="media-content">
+                <p class="title is-4"><%= @post.title %></p>
+              </div>
+            </div>
           </h1>
         </div>
-      </div>
-    </section>
+
+            <div class="container">
+              <article class="panel is-link">
+                by<%= link_to user_path(@post.user), class: "panel-block" do %>
+                  <span class="panel-icon">
+                    <i class="fas fa-user" aria-hidden="true"><%= @post.user.user_name %></i>
+                  </span>
+                <% end %>さん
+              </article>
+
+
+              
+            </div>
+
+
+
+
+
+
+
 
     <section class="section">
       <div class="container">
@@ -19,35 +41,47 @@
               <div class="card-image">
                 <figure class="image is-4by3">
                   <% @post.post_images.each do |img| %>
-                    <%= attachment_image_tag img, :post_image %>
+                    <%= attachment_image_tag img, :post_image, size: '400x320' %>
                   <% end %>
-                  
+
                 </figure>
               </div>
               <div class="card-content">
-                <div class="media">
-                  <div class="media-content">
-                    <p class="title is-4"><%= @post.title %></p>
-                  </div>
-                </div>
+
                 <div class="content">
                   <table class="table is-narrow">
-                    <tr>
-                      <th>SPOT</th>
-                    </tr>
+
                     <tr>
                       <td><%= simple_format @post.body %></td>
                     </tr>
+                    <tr>
+                      <th>SPOT</th>
+                    </tr>
                   </table>
-                  <% if @post.user.id == current_user.id %>
-                    <%= link_to "編集画面へ", edit_post_path(@post), class: "button is-success" %>
-                  <% end %>
+
                 </div>
               </div>
             </div>
           </div>
+        </div>
+        <div class="float-right">
+          <% if @post.user.id == current_user.id %>
+            <%= link_to "編集", edit_post_path(@post), class: "button is-success" %>
+          <% end %>
+        </div>
+      </div>
+    </section>
+  </div>
+    <div class="row">
+          <%= render 'posts/sidebar', user: @user, post: @post %>
+    </div>
+</div>
 
-          <div class="column is-4">
+
+
+
+
+<div class="column is-4">
             <article class="panel is-link">
               <p class="panel-heading">
                 By <%= @post.user.user_name %>
@@ -65,11 +99,3 @@
               <% end %>
             </article>
           </div>
-        </div>
-      </div>
-    </section>
-  </div>
-    <div class="row">
-          <%= render 'posts/sidebar', user: @user, post: @post %>
-    </div>
-</div>
