--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,104 +1,123 @@
+
+<div class="row">
+  <div class="col-md-10">
+
+
+          <section class="hero is-success">
+            <div class="hero-body">
+              <div class="container">
+                <div class="row">
+            <div class="col-3 offset-0 table-active h4 text-center">MY PAGE</div>
+      </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="section">
+            <div class="container">
+              <div class="columns is-centered">
+                <div class="column is-8">
+                  <div class="columns is-centered">
+                    <div class="column is-4">
+                      <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
+                        <%= attachment_image_tag @user, :profile_image, fallback: "noimage.png", class: "profile_image is-rounded",  format: 'jpeg', class: " pull-left profile-img", fallback: "noimage.png", size:"100x100" %>
+                        <div class="float-right">
+                        <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
+                      </div>
+                      </figure>
+
+                      
+
+                    </div>
+                    <div class="column is-8">
+                      <table class="table is-fullwidth">
+                        <tr>
+                          <td class="is-size-4">
+                            <strong><%= @user.user_name %></strong>
+                          </td>
+                          <% if @user.id == current_user.id %>
+                          <td class="is-size-4">
+                            <%= @user.email %>
+                          </td>
+                          <td>
+                              
+                          </td>
+                          <% end %>
+                        </tr>
+                      </table>
+                      <table class="table is-fullwidth">
+                        <tr>
+                          <td>
+                            <%= @user.profile %>
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="section">
+            <div class="container">
+              <div class="columns is-multiline">
+                <% @user.posts.each do |post| %>
+                  <div class="column is-4">
+                    <div class="card">
+                      <div class="card-image">
+                        <figure class="image is-4by3">
+                          <%= link_to post_path(post) do %>
+                            <% post.post_images.each do |img| %>
+                              <%= attachment_image_tag img, :post_image, fallback: "noimage.png", size: '400x320' %>
+                            <% end %>
+                          <% end %>
+                        </figure>
+                      </div>
+                      <div class="card-content">
+                        <div class="media">
+                          <div class="media-content">
+                            <%= link_to post_path(post), class: "panel-block" do %>
+                              <span class="panel-icon">
+                                <i class="fas fa-book" aria-hidden="true"></i>
+                              </span>
+                              この投稿を見る
+                            <% end %>
+                            <% if @user.id == current_user.id %>
+                              <%= link_to edit_post_path(post), class: "panel-block" do %>
+                                <span class="panel-icon">
+                                  <i class="fas fa-edit"></i>
+                                </span>
+                                この投稿を編集する
+                              <% end %>
+                              <%= link_to post_path(post), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
+                                <span class="panel-icon">
+                                  <i class="fas fa-trash"></i>
+                                </span>
+                                この投稿を削除する
+                              <% end %>
+                            <% end %>
+                          </div>
+                        </div>
+                        <div class="content">
+                          <time><%= post.updated_at.strftime("%Y-%m-%d %H:%M") %></time>更新
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+          </section>
+</div>
+  <div class="row">
+      <%= render 'posts/sidebar', user: @user, post: @post %>
+  </div>
+</div>
+
+
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
 
 
-<section class="hero is-success">
-  <div class="hero-body">
-    <div class="container">
-      <h1 class="title">
-        MY PAGE
-      </h1>
-    </div>
-  </div>
-</section>
 
-<section class="section">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-8">
-        <div class="columns is-centered">
-          <div class="column is-4">
-            <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
-              <%= attachment_image_tag @user, :profile_image, fallback: "noimage.png", class: "profile_image is-rounded",  format: 'jpeg', class: " pull-left profile-img", fallback: "no_image.jpg", size:"100x100" %>
-            </figure>
-          </div>
-          <div class="column is-8">
-            <table class="table is-fullwidth">
-              <tr>
-                <td class="is-size-4">
-                  <strong><%= @user.user_name %></strong>
-                </td>
-                <% if @user.id == current_user.id %>
-                <td class="is-size-4">
-                  <%= @user.email %>
-                </td>
-                <td>
-                    <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
-                </td>
-                <% end %>
-              </tr>
-            </table>
-            <table class="table is-fullwidth">
-              <tr>
-                <td>
-                  <%= @user.profile %>
-                </td>
-              </tr>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container">
-    <div class="columns is-multiline">
-      <% @user.posts.each do |post| %>
-        <div class="column is-4">
-          <div class="card">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <%= link_to post_path(post) do %>
-                <% post.post_images.each do |img| %>
-                  <%= attachment_image_tag img, :post_image, fallback: "noimage.png" %>
-                <% end %>
-                <% end %>
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="media">
-                <div class="media-content">
-                  <%= link_to post_path(post), class: "panel-block" do %>
-                    <span class="panel-icon">
-                      <i class="fas fa-book" aria-hidden="true"></i>
-                    </span>
-                    この投稿を見る
-                  <% end %>
-                  <% if @user.id == current_user.id %>
-                    <%= link_to edit_post_path(post), class: "panel-block" do %>
-                      <span class="panel-icon">
-                        <i class="fas fa-edit"></i>
-                      </span>
-                      この投稿を編集する
-                    <% end %>
-                    <%= link_to post_path(post), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
-                      <span class="panel-icon">
-                        <i class="fas fa-trash"></i>
-                      </span>
-                      この投稿を削除する
-                    <% end %>
-                  <% end %>
-                </div>
-              </div>
-              <div class="content">
-                <time><%= post.updated_at.strftime("%Y-%m-%d %H:%M") %></time>更新
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</section>
