--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,3 @@
-<h1>Posts#edit</h1>
-<p>Find me in app/views/posts/edit.html.erb</p>
 
 
 <section class="hero is-success">
@@ -39,6 +37,11 @@
           <div class="field">
             <%= f.label :body, "内容", class: "label" %>
             <%= f.text_area :body, class: "textarea" %>
+          </div>
+
+          <div class="field">
+            <%= f.label :place, "所在地", style: "width: 15%;", class: "label" %>
+            <%= f.text_area :place, style: "width: 60%; height: 30px;", class: "textarea" %>
           </div>
 
 
@@ -95,3 +98,9 @@
     </div>
   </div>
 </section>
+
+
+
+<h1>Posts#edit</h1>
+<p>Find me in app/views/posts/edit.html.erb</p>
+
