--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,7 +11,8 @@
         <div style="padding-top: 80px;">
           <% if @post.errors.any? %>
             <div class="notification is-danger">
-              <h2><%= pluralize(@post.errors.count, "error") %> prohibited this object from being saved: not successfully</h2>
+              <h3><%= pluralize(@post.errors.count, "error") %></h3>
+              <h6>下記のエラーを直して再度投稿してください！</h6>
               <ul>
                 <% @post.errors.full_messages.each do |message| %>
                 <li><%= message %></li>
@@ -43,7 +44,10 @@
                       <%= f.text_area :body, style: "width: 60%; height: 120px;", class: "textarea" %>
                     </div>
 
-                      
+                    <div class="field">
+                      <%= f.label :place, "所在地", style: "width: 15%;", class: "label" %>
+                      <%= f.text_field :place, style: "width: 60%; height: 30px;", class: "textarea" %>
+                    </div>
 
                     <%= f.submit '投稿', class: "button is-success" %>
 
