--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,7 @@
 
             <div class="container">
               <article class="panel is-link">
-                by<%= link_to user_path(@post.user), class: "panel-block" do %>
+                Favospot by<%= link_to user_path(@post.user), class: "panel-block" do %>
                   <span class="panel-icon">
                     <i class="fas fa-user" aria-hidden="true"><%= @post.user.user_name %></i>
                   </span>
@@ -56,6 +56,7 @@
                     </tr>
                     <tr>
                       <th>SPOT</th>
+                      <th><%= simple_format @post.place %></th>
                     </tr>
                   </table>
 
@@ -67,6 +68,10 @@
         <div class="float-right">
           <% if @post.user.id == current_user.id %>
             <%= link_to "編集", edit_post_path(@post), class: "button is-success" %>
+
+            <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "削除しますか？"}, class: "button is-success"  %>
+
+
           <% end %>
         </div>
       </div>
