--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -59,8 +59,8 @@
                     <% if user_signed_in? %>
                         <h5>
                           <br>
-                          珍妙・奇妙な観光地・珍スポット（B級スポット・パラダイス）を<br>
-                          珍スポットハンター・麻理が探訪しレポートするブログ。<br>写真・地図・詳細情報つきで、観光ガイドとしても役立ちます。<br>
+                          Favospotはあなたの ”お気に入りの場所” を紹介するサイトです。<br>
+                          何気ない景色や公園、道端の花壇など<br>あなたの ”お気に入りの場所” はきっと誰かも好きな場所です。<br>
                           
                         </h5>
                         <p>ヘッダーの New spot から<br>あなたのお気に入りの場所を教えてください。
@@ -68,8 +68,8 @@
                     <% else %>
                         <h5>
                           <br>
-                          珍妙・奇妙な観光地・珍スポット（B級スポット・パラダイス）を<br>
-                          珍スポットハンター・麻理が探訪しレポートするブログ。<br>写真・地図・詳細情報つきで、観光ガイドとしても役立ちます。<br>
+                          Favospotはあなたの ”お気に入りの場所” を紹介するサイトです。<br>
+                          何気ない景色や公園、道端の花壇など<br>写あなたの ”お気に入りの場所” はきっと誰かも好きな場所です。<br>
                         </h5>
                         <p>投稿、コメントにつきましては
                         <br>新規登録より会員登録をお願いいたします。
