--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,30 @@
   background-size: contain;
 }
 
+header {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 100;
+    height: 100px;
+}
+
+#contents {
+  margin-top: 110px
+}
+
+.notice {
+
+  color: #white;
+  text-align: left;
+}
+
+.alert {
+
+  color: #white;
+  text-align: center;
+}
+
 
 /* Sticky footer styles
 -------------------------------------------------- */
