--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,65 +1,66 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
 
+<div class="container">
+  <div class="row">
+      <div class="col-3 offset-3 table-active h4 text-center">USER EDIT</div>
+  </div>
 
-<section class="hero is-success">
-  <div class="hero-body">
+  <section class="section">
     <div class="container">
-      <h1 class="title">
-        ユーザー編集
-      </h1>
-    </div>
-  </div>
-</section>
+      <div class="columns is-centered">
+        <div class="column is-6">
 
+          <% if @user.errors.any? %>
+            <div class="notification is-danger">
+              <h3><%= pluralize(@user.errors.count, "error") %></h3>
 
-<% if @user.errors.any? %>
-  <div class="notification is-danger">
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this object from being saved: not successfully</h2>
-    <ul>
-      <% @user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+                <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
 
-<section class="section">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-6">
-        <%= form_for @user do |f| %>
-          <div class="field">
-            <%= f.label :username, "ユーザー名", class: "label" %>
-            <%= f.text_field :user_name, class: "input" %>
-          </div>
+          <%= form_for @user do |f| %>
 
-          <div class="field">
-            <%= f.label :email, "メールアドレス", class: "label" %>
-            <%= f.email_field :email, class: "input" %>
-          </div>
+            <div class="field">
 
-          <div class="field">
-            <%= f.label :profile, "プロフィール", class: "label" %>
-            <%= f.text_area :profile, class: "textarea" %>
-          </div>
+              <%= f.label :　, "", style: "width: 22%;", class: "label" %>
+              <%= attachment_image_tag current_user, :profile_image, fallback: "noimage.png", size: '100x100' %>
+              <%= f.attachment_field :profile_image, class: "input" %>
+            </div>
 
-          <div class="field">
-            <%= f.label :profile_image, "プロフィール画像", class: "label" %>
-            <%= f.attachment_field :profile_image, class: "input" %>
-          </div>
+            <div class="field">
+              <%= f.label :username, "ユーザー名", style: "width: 22%;", class: "label" %>
+              <%= f.text_field :user_name, style: "width: 45%;", class: "input" %>
+            </div>
 
-          <%= f.submit "更新", class: "button is-success" %>
-          <div class="col-2 offset-2">
-      <%= link_to "退会する", destroy_user_path, method: :delete, class: "btn btn-danger btn-block" %>
-    </div>
-        <% end %>
+            <div class="field">
+              <%= f.label :email, "メールアドレス", style: "width: 22%;", class: "label" %>
+              <%= f.email_field :email, style: "width: 45%;", class: "input" %>
+            </div>
+
+            <div class="field">
+              <%= f.label :profile, "プロフィール", style: "width: 22%;", class: "label" %>
+              <%= f.text_area :profile, style: "width: 60%; height: 120px;", class: "textarea" %>
+            </div>
+
+            <div class="col-1 offset-3">
+            <%= f.submit "更新", class: "button is-success" %>
+            </div>
+
+            <div class="col-4 offset-6">
+              <%= link_to "退会する", destroy_user_path, method: :delete, data: {confirm: "退会すると全てのデータが削除されます。よろしいでしょうか？"}, class: "btn btn-danger btn-block" %>
+             </div>
+          <% end %>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+ </section>
+</div>
 
 
+<h1>Users#edit</h1>
+<p>Find me in app/views/users/edit.html.erb</p>
 
 
 
