--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>Favospot</title>
     <%= csrf_meta_tags %>
@@ -15,6 +16,7 @@
   </head>
 
   <body>
+
     <header class="border-bottom mb-3", style="background-color: #F5F5F5;">
               <nav class="navbar navbar-expand-lg">
 
@@ -68,29 +70,27 @@
                       <li class="mr-4"><%= link_to 'Login', new_user_session_path, class: "page-link text-dark d-inline-block btn" %></li>
                     <% end %>
                   </ul>
+                  <div class="container">
+              <div class="row">
+                <div class="col align-self-end">
+                  <% flash.each do |key, value| %>
+                    <%= content_tag(:div, value, class: "#{key}") %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
               </nav>
               </header>
-              <% if flash[:notice] %>
-      <div class="notification is-info">
-        <p class="notice"><%= notice %></p>
-      </div>
-    <% end %>
 
 
-      <% if flash[:alert] %>
-      <div class="notification is-danger">
-        <p class="alert"><%= alert %></p>
-      </div>
-    <% end %>
     <div id='contents'>
 
         <%= yield %>
 
     </div>
+
   </body>
-<% flash.each do |key, value| %>
-    <%= content_tag(:div, value, class: "#{key}") %>
-  <% end %>
+
   <!-- Custom styles for this template -->
     <footer class="footer", style="background-color: #F5F5F5;">
       <div class="container">
