--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,10 @@
 <div class="row">
   <div class="col-md-10">
-
-
-
-        <div class="container">
-          <h1>
-            <p><%= @post.title %></p>
-          </h1>
-        </div>
-
-            
-
-
-
-
-
-
-
+    <div class="container">
+      <h1>
+        <p><%= @post.title %></p>
+      </h1>
+    </div>
 
     <section class="section">
       <div class="container">
@@ -31,6 +19,24 @@
                     <%= attachment_image_tag img, :post_image, size: '400x320' %>
                   <% end %>
 
+
+
+                  <td> <!-- いいね機能 -->
+                <% if current_user.already_favorited?(@post) %>
+                  <%= link_to post_favorites_path(@post), method: :delete do %>
+                    <i class="fas fa-heart"></i>
+                  <% end %>
+                  <%= @post.favorites.count %>
+                <% else %>
+                  <%= link_to post_favorites_path(@post), method: :post do %>
+                    <i class="far fa-heart"></i>
+                  <% end %>
+                  <%= @post.favorites.count %>
+                <% end %>
+              </td>
+
+
+
                 </figure>
               </div>
               <div class="card-content">
@@ -44,21 +50,19 @@
                     <tr>
                       <th>所在地</th>
                       <td><%= simple_format @post.place %></td>
-                      <td><div class="float-right">
-          <% if current_user && @post.user.id == current_user.id %>
-            <%= link_to "写真の変更", edit_post_post_image_path(@post), class: "button is-success" %>
+                      <td>
+                        <div class="float-right">
+                          <% if current_user && @post.user.id == current_user.id %>
+                            <%= link_to "写真の変更", edit_post_post_image_path(@post), class: "button is-success" %>
 
-            <%= link_to "編集", edit_post_path(@post), class: "button is-success" %>
+                            <%= link_to "編集", edit_post_path(@post), class: "button is-success" %>
 
-            <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "削除しますか？"}, class: "button is-success"  %>
-
-
-          <% end %>
-        </div>
-      </td>
+                            <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "削除しますか？"}, class: "button is-success"  %>
+                          <% end %>
+                        </div>
+                      </td>
                     </tr>
                   </table>
-
                 </div>
               </div>
             </div>
@@ -66,16 +70,14 @@
         </div>
 
         <div class="container">
-              <article class="panel is-link">
-                Favospot by<%= link_to user_path(@post.user), class: "panel-block" do %>
-                  <span class="panel-icon">
-                    <i class="fas fa-user" aria-hidden="true"><%= @post.user.user_name %></i>
-                  </span>
-                <% end %>さん
-              </article>
-            </div>
-
-        
+          <article class="panel is-link">
+            Favospot by<%= link_to user_path(@post.user), class: "panel-block" do %>
+              <span class="panel-icon">
+                <i class="fas fa-user" aria-hidden="true"><%= @post.user.user_name %></i>
+              </span>
+            <% end %>さん
+          </article>
+        </div>
       </div>
     </section>
   </div>
