--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,12 +1,18 @@
 <h1>Contacts#new</h1>
 <p>Find me in app/views/contacts/new.html.erb</p>
 
-<div class="container">
-  <div class="row">
-    <div class="col-4 offset-4 table-acti h3 text-center">Contact</div>
-    <div class="col-4 offset-4 h5 text-center">SAY HI!!</div>
+
+<section class="hero is-success">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        <div class="col-4 offset-4 table-active h3 text-center">Contact
+        </div>
+        <div class="col-4 offset-4 h5 text-center">SAY HI!!</div>
+      </h1>
+    </div>
   </div>
-</div>
+</section>
 
   <div class="container">
 <%= form_for contacts_new_path @contact do |f| %>
@@ -26,7 +32,7 @@
    <%= f.text_area :message, size: '10x10', class: 'form-control' %>
  </div>
 
-  <%= f.submit '送信' %>
+  <%= f.submit '送信', class: "btn btn-primary" %>
 
 <% end %>
   </div>
