--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,35 @@
-<h2>Forgot your password?</h2>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-6 mx-auto">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+		<section class="hero is-success">
+          <div class="hero-body">
+            <div class="container">
+              <h1 class="title">
+                <div class="col-12 offset-0 table-active h4 text-center">Forgot your password?
+                </div>
+              </h1>
+            </div>
+          </div>
+        </section>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+
+		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+		  <%= render "devise/shared/error_messages", resource: resource %>
+
+		  <div class="form-group">
+		    <%= f.label :email, class: "label" %><br />
+		    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input", class: "form-control" %>
+		  </div>
+
+
+		  <div class="actions">
+		    <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
+		  </div>
+		<% end %>
+
+		<%= render "devise/shared/links" %>
+
+	</div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
