--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,18 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-6 mx-auto">
-      <h2>Sign up</h2>
+
+      <section class="hero is-success">
+          <div class="hero-body">
+            <div class="container">
+              <h1 class="title">
+                <div class="col-10 offset-1 table-active h4 text-center">Sign up
+                </div>
+              </h1>
+            </div>
+          </div>
+        </section>
+
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
