--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,150 +1,154 @@
 <!DOCTYPE html>
+<html lang="ja">
 <html>
-
   <head>
+    <meta charset="utf8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Favospot</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
-      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-      <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-      <script src="https://kit.fontawesome.com/efa75c5e0c.js" crossorigin="anonymous"></script>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/efa75c5e0c.js" crossorigin="anonymous"></script>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/style.css" media="all">
   </head>
 
   <body>
-
     <header class="border-bottom mb-3", style="background-color: #F5F5F5;">
-              <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg">
+        <ul class="navbar-nav">
+          <li class="nav-item m-3">
+            <span><%= link_to image_tag('logo.png'), "/" %></span>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if user_signed_in? %>
 
-                 
+            <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
 
-                  <ul class="navbar-nav">
-                    <li class="nav-item m-3">
-                      <span><%= link_to image_tag('logo.png'), "/" %></span>
-                    </li>
-                  </ul>
+            <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
 
-                  
-                  <ul class="nav navbar-nav navbar-right">
-                    <% if user_signed_in? %>
-                     
+            <li class="mr-4"><%= link_to 'Newspot', new_post_path(current_user), class: "page-link text-dark d-inline-block btn" %></li>
 
-                      <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'MY PAGE', user_path(current_user.id), class: "page-link text-dark d-inline-block btn" %></li>
 
-                      <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4 animate__pulse"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
+            <li>
 
-                      <li class="mr-4"><%= link_to 'Newspot', new_post_path(current_user), class: "page-link text-dark d-inline-block btn" %></li>
+            </li>
+          <% elsif admin_signed_in? %>
+            <li class="mr-4"><%= link_to '商品一覧', admins_products_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to '会員一覧', admins_members_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to '注文履歴一覧', admins_orders_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'ジャンル一覧', admins_product_genres_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'Logout', destroy_admin_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
+            <li>
+              <%= form_tag(admins_search_path, :method => 'get') do %>
+                <%= text_field_tag :search %>
+                <%= select_tag(:option, options_for_select([["member", "1"],["product","2"]])) %>
+                <%= submit_tag '検索', :name => nil %>
+              <% end %>
+            </li>
+          <% else %>
+            <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
 
-                      <li class="mr-4"><%= link_to 'MY PAGE', user_path(current_user.id), class: "page-link text-dark d-inline-block btn" %></li>
-
-                      <li class="mr-4 animate__pulse"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li>
-                        <!-- ここに検索記述 -->
-                      </li>
-                    <% elsif admin_signed_in? %>
-                      <li class="mr-4"><%= link_to '商品一覧', admins_products_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to '会員一覧', admins_members_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to '注文履歴一覧', admins_orders_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to 'ジャンル一覧', admins_product_genres_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to 'Logout', destroy_admin_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li>
-                        <%= form_tag(admins_search_path, :method => 'get') do %>
-                          <%= text_field_tag :search %>
-                          <%= select_tag(:option, options_for_select([["member", "1"],["product","2"]])) %>
-                          <%= submit_tag '検索', :name => nil %>
-                        <% end %>
-                      </li>
-                    <% else %>
-                      <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
-
-                      <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
 
 
-                      <li class="mr-4"><%= link_to 'CONTACT',  contacts_new_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'CONTACT',  contacts_new_path, class: "page-link text-dark d-inline-block btn" %></li>
 
-                      <li class="mr-4"><%= link_to 'Signup', new_user_registration_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to 'Login', new_user_session_path, class: "page-link text-dark d-inline-block btn" %></li>
-                    <% end %>
-                  </ul>
-                  <div class="container">
-              <div class="row">
-                <div class="col align-self-end">
-                  <% flash.each do |key, value| %>
-                    <%= content_tag(:div, value, class: "#{key}") %>
-                  <% end %>
-                </div>
+            <li class="mr-4"><%= link_to 'Signup', new_user_registration_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'Login', new_user_session_path, class: "page-link text-dark d-inline-block btn" %></li>
+          <% end %>
+        </ul>
+          <div class="container">
+            <div class="row">
+              <div class="col align-self-end">
+                <% flash.each do |key, value| %>
+                  <%= content_tag(:div, value, class: "#{key}") %>
+                <% end %>
               </div>
             </div>
-              </nav>
-              </header>
-
+          </div>
+      </nav>
+    </header>
 
     <div id='contents'>
-
-        <%= yield %>
-
+      <%= yield %>
     </div>
 
+    
   </body>
 
   <!-- Custom styles for this template -->
-    <footer class="footer", style="background-color: #F5F5F5;">
-      <div class="container">
+  <footer class="footer", style="background-color: #F5F5F5;">
+    <div class="container">
 
-              <nav class="navbar navbar-expand-lg">
-                  <ul class="nav navbar-nav mr-auto">
-                    
-                  </ul>
+      <nav class="navbar navbar-expand-lg">
+        <ul class="nav navbar-nav mr-auto">
 
+        </ul>
 
-                  <ul class="nav">
-                    <% if user_signed_in? %>
-                      <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
+        <ul class="nav">
+          <% if user_signed_in? %>
+            <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
 
-                      <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
 
-                      <li class="mr-4"><%= link_to 'CONTACT',  contacts_new_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'CONTACT',  contacts_new_path, class: "page-link text-dark d-inline-block btn" %></li>
 
-                      <li class="mr-4"><%= link_to 'MY PAGE', user_path(current_user.id), class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'MY PAGE', user_path(current_user.id), class: "page-link text-dark d-inline-block btn" %></li>
 
-                      <li class="mr-4 animate__pulse"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li>
-                        <!-- ここに検索記述 -->
-                      </li>
-                    <% elsif admin_signed_in? %>
-                      <li class="mr-4"><%= link_to '商品一覧', admins_products_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to '会員一覧', admins_members_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to '注文履歴一覧', admins_orders_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to 'ジャンル一覧', admins_product_genres_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to 'Logout', destroy_admin_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li>
-                        <%= form_tag(admins_search_path, :method => 'get') do %>
-                          <%= text_field_tag :search %>
-                          <%= select_tag(:option, options_for_select([["member", "1"],["product","2"]])) %>
-                          <%= submit_tag '検索', :name => nil %>
-                        <% end %>
-                      </li>
-                    <% else %>
-                      <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4 animate__pulse"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
+            <li>
+              <!-- ここに検索記述 -->
+            </li>
+          <% elsif admin_signed_in? %>
+            <li class="mr-4"><%= link_to '商品一覧', admins_products_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to '会員一覧', admins_members_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to '注文履歴一覧', admins_orders_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'ジャンル一覧', admins_product_genres_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'Logout', destroy_admin_session_path, method: :delete, class: "page-link text-dark d-inline-block btn" %></li>
+            <li>
+              <%= form_tag(admins_search_path, :method => 'get') do %>
+                <%= text_field_tag :search %>
+                <%= select_tag(:option, options_for_select([["member", "1"],["product","2"]])) %>
+                <%= submit_tag '検索', :name => nil %>
+              <% end %>
+            </li>
+          <% else %>
+            <li class="mr-4"><%= link_to 'HOME', root_path, class: "page-link text-dark d-inline-block btn" %></li>
 
-                      <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
-
-
-                      <li class="mr-4"><%= link_to 'CONTACT',  contacts_new_path, class: "page-link text-dark d-inline-block btn" %></li>
-
-                      <li class="mr-4"><%= link_to 'Signup', new_user_registration_path, class: "page-link text-dark d-inline-block btn" %></li>
-                      <li class="mr-4"><%= link_to 'Login', new_user_session_path, class: "page-link text-dark d-inline-block btn" %></li>
-                    <% end %>
-
-                  </ul>
-              </nav>
+            <li class="mr-4"><%= link_to 'INFO', top_infomation_path, class: "page-link text-dark d-inline-block btn" %></li>
 
 
-        <p class="text-center">© All rights recerved by Molique.</p>
-      </div>
-    </footer>
+            <li class="mr-4"><%= link_to 'CONTACT',  contacts_new_path, class: "page-link text-dark d-inline-block btn" %></li>
+
+            <li class="mr-4"><%= link_to 'Signup', new_user_registration_path, class: "page-link text-dark d-inline-block btn" %></li>
+            <li class="mr-4"><%= link_to 'Login', new_user_session_path, class: "page-link text-dark d-inline-block btn" %></li>
+          <% end %>
+
+        </ul>
+      </nav>
+
+
+      <p class="text-center">© All rights recerved by Molique.</p>
+    </div>
+
+    <span id="back">
+      <a href="#">
+        <%= link_to image_tag('arrow.png'), alt: "" %>
+      </a>
+    </span>
+
+
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+     <!-- text?? -->
+  </footer>
 </html>
