--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -17,7 +17,7 @@
                   <%= form_for @post do |f| %>
                     <div class="field">
                       <%= f.label :title, "SPOT名", style: "width: 15%;", class: "label" %>
-                      <%= f.text_field :title, style: "width: 45%;", class: "input" %>
+                      <%= f.text_field :title, style: "width: 45%;", class: "input", placeholder: "タイトル"%>
                     </div>
 
                     <%= f.fields_for :post_images do |img| %>
@@ -30,12 +30,12 @@
 
                     <div class="field">
                       <%= f.label :body, "説明文", style: "width: 15%;", class: "label" %>
-                      <%= f.text_area :body, style: "width: 60%; height: 120px;", class: "textarea" %>
+                      <%= f.text_area :body, style: "width: 60%; height: 120px;", class: "textarea", placeholder: "本文" %>
                     </div>
 
                     <div class="field">
                       <%= f.label :place, "所在地", style: "width: 15%;", class: "label" %>
-                      <%= f.text_field :place, style: "width: 60%; height: 30px;", class: "textfield" %>
+                      <%= f.text_field :place, style: "width: 60%; height: 30px;", class: "textfield", placeholder: "東京駅構内など" %>
                     </div>
 
                     <%= f.submit '投稿', class: "button is-success" %>
